package edu.fiuba.algo3.modelo;

public interface DemoradorPorEntradas {

    int demoraTemporal();

    DemoradorPorEntradas aumentar();
}
